--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 .principal {
     background-image: url("img/you.webp");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 .container {
