--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ img {
     font-size: 14px;
     transition: background-color 0.3s ease;
     backdrop-filter: blur(3px); /* Aplica blur no fundo do botão */
+    margin: 5px;
   }
   
   button:hover, input[type="submit"]:hover, input[type="reset"]:hover {
