--- a/styles.css
+++ b/styles.css
@@ -87,5 +87,6 @@ img {
     border-radius: 15px;
     background-color: #16161660;
     backdrop-filter: blur(3px);
-    max-width: 1100px;
+    min-width: 900px;
+    max-width: 900px;
 }
